# google-flow-beta-reviews

./: .env.example  .gitignore  README.md  analyze.py  main.py  package-lock.json  package.json  pyproject.toml  scrape-deep.js  scrape.js  vercel.json
analyzer/: aggregate.py  build_outputs.py  classify.py  common.py  extend_classifications.py  taxonomy.py
scrapers/: app_store.py  common.py  hackernews.py  play_store.py  producthunt.py  reddit.py  youtube.py
web/: README.md  next.config.ts  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/components/: country-filter.tsx  daily-trends.tsx  dashboard.tsx  feature-list.tsx  feature-row.tsx  header.tsx  kpi-card.tsx  kpi-row.tsx  review-card.tsx  review-drawer.tsx  score-distribution.tsx  source-pill.tsx
web/data/: features.json  review-features.json  reviews.slim.json
web/lib/: colors.ts  data.ts  sentiment.ts  types.ts
web/scripts/: sync-data.mjs
