[project]
name = "flow-sentiment-pack"
version = "0.1.0"
description = "Multi-source scraping pack for Google Flow Beta / Whisk sentiment analysis"
requires-python = ">=3.11"
dependencies = [
    "google-play-scraper>=1.2.7",
    "app-store-web-scraper>=0.2.0",
    "praw>=7.7.1",
    "google-api-python-client>=2.140.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "loguru>=0.7.2",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
    "anthropic>=0.40.0",
]

[tool.uv]
package = false
